--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "image-size": "^0.8.3",
     "mkdirp": "^0.5.1",
     "sharp": "^0.23.2"
   }
