--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index"
+    "start": "node index",
+    "devStart": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "image-size": "^0.8.3",
     "mkdirp": "^0.5.1",
     "sharp": "^0.23.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
